--- a/mosquitto.conf
+++ b/mosquitto.conf
@@ -1,9 +1,6 @@
-persistence true
-
-persistence_location /var/lib/mosquitto/
-
-log_dest file /var/log/mosquitto/mosquitto.log
-
+# Place your local configuration in /mosquitto/confing/
 allow_anonymous true
-
 listener 1883
+persistence true
+persistence_location /mosquitto/data/
+log_dest file /mosquitto/log/mosquitto.log
